--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,9 @@
 PORT=5003
-MONGO_URI=mongodb+srv://Mila:ChristineSchwarz@cluster0.ls9t1pr.mongodb.net/
+MONGO_URI=mongodb+srv://Mila:ChristineSchwarz@cluster0.ls9t1pr.mongodb.net/wellness-app?retryWrites=true&w=majority
+
 JWT_SECRET=myVerySecretKey
+
+# Nodemailer config
+EMAIL_USER=mmiladaniel@gmail.com
+EMAIL_PASS=babs jpvr wjuv aaiu
+CLIENT_URL=http://localhost:5173
