--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "datepicker": "^0.0.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.18.1",
     "i18next": "^25.2.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
