--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+  "client:build": "cd ../client && npm install && npm run build",
     "dev": "nodemon server.js"
   }
 }
