--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "node server.js",
   "client:build": "cd ../client && npm install && npm run build",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+     "build": "npm run client:build"
   }
 }
