--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-  "client:build": "cd ../client && npm install && npm run build",
+  "client:build": "cd client && npm install && npm run build",
     "dev": "nodemon server.js",
      "build": "npm run client:build"
   }
