--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "debug": "^4.4.3",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "finalhandler": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "nodemailer": "^7.0.3"
