--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Christine Schwarz site",
   "main": "server.js",
   "type": "module",
   "engines": {
@@ -9,18 +9,17 @@
   },
   "scripts": {
     "start": "node server.js",
+    "build": "npm run client:build",
     "client:build": "cd ../client && npm install && npm run build",
     "dev": "nodemon server.js",
-    "build": "npm run client:build"
+    "postinstall": "npm install"
   },
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "debug": "^4.4.3",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "finalhandler": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "nodemailer": "^7.0.3"
