--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,7 @@
     "start": "node server.js",
     "build": "npm run client:build",
     "client:build": "cd ../client && npm install && npm run build",
-    "dev": "nodemon server.js",
-    "postinstall": "npm install"
-  },
+    "dev": "nodemon server.js"  },
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
