--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
     "start": "node server.js",
     "build": "npm run client:build",
     "client:build": "cd ../client && npm install && npm run build",
-    "dev": "nodemon server.js"  },
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "debug": "^4.4.3",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
